# cpu-lab

./: .gitignore  CMakeLists.txt  STRUCTURE.md
config/: benchmark_matrix.csv  benchmark_sum.csv
data/processed/summary/: best_config_by_size.csv  report.md  summary_matrix_dot.csv  summary_sum_reduce.csv
data/raw/matrix_dot/: benchmark_results.csv
data/raw/sum_reduce/: benchmark_results.csv  benchmark_results_after_fix.csv  benchmark_results_probe.csv  benchmark_results_probe_release.csv
docs/: sum_reduce_superscalar_analysis.md
include/application/: benchmark_pipeline.hpp  matrix_benchmark_pipeline.hpp  sum_reduce_benchmark_pipeline.hpp
include/domain/matrix_dot/: matrix.hpp  matrix_dot_cache.hpp  matrix_dot_cuda.hpp  matrix_dot_naive.hpp  matrix_generator.hpp  vector.hpp
include/domain/shared/: algorithm_orchestrator.hpp  benchmark_result.hpp
include/domain/sum_reduce/: sum_generator.hpp  sum_naive.hpp  sum_superscalar.hpp
include/infrastructure/csv/: csv_reader.hpp  csv_writer.hpp  row.hpp
include/infrastructure/system/: platform_info.hpp
include/infrastructure/timing/: high_resolution_timer.hpp
include/interfaces/cli/: cli_parser.hpp  command_dispatcher.hpp  validation_service.hpp
scripts/visualizer/: main.py  plotters.py  preprocess.py  requirements.txt
src/application/: matrix_benchmark_pipeline.cpp  sum_reduce_benchmark_pipeline.cpp
src/domain/matrix_dot/: matrix.cpp  matrix_dot_cache.cpp  matrix_dot_cuda.cu  matrix_dot_cuda_stub.cpp  matrix_dot_naive.cpp  matrix_generator.cpp  vector.cpp
src/domain/shared/: algorithm_orchestrator.cpp  benchmark_result.cpp
src/domain/sum_reduce/: sum_generator.cpp  sum_naive.cpp  sum_superscalar.cpp
src/infrastructure/csv/: csv_reader.cpp  csv_writer.cpp  row.cpp
tests/: algorithm_orchestrator_test.cpp  benchmark_result_test.cpp  cli_integration_test.cpp  cli_parser_test.cpp  command_dispatcher_test.cpp  csv_reader_test.cpp  csv_writer_test.cpp  high_resolution_timer_test.cpp  matrix_benchmark_pipeline_test.cpp  matrix_dot_cache_test.cpp  matrix_dot_vector_test.cpp  matrix_generator_test.cpp  platform_info_test.cpp  sum_generator_test.cpp  sum_reduce_benchmark_pipeline_test.cpp  sum_reduce_test.cpp  test_visualizer.py  validation_service_test.cpp
tex/: .gitignore  Makefile  build.ps1  latexmkrc  main.tex  preamble.tex
tex/sections/: index.tex
(+30 files in other folders)
